<resources>
    <string name="app_name">Scooter Sharing</string>
    <string name="add_ride_button">Add Ride</string>
    <string name="list_rides_button">List Rides</string>
    <string name="rides_map_button">Rides Map</string>
    <string name="scan_qr_button">Scan QR</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="start_ride_button">Start Ride</string>
    <string name="stop_ride_button">Stop Ride</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="accept_option">Yes</string>
    <string name="decline_option">No</string>
    <string name="name_label">Name:</string>
    <string name="location_label">Location:</string>
    <string name="loading_name_label">Loading name…</string>
    <string name="loading_location_label">Loading location…</string>
    <string name="loading_timestamp_label">Loading timestamp…</string>
    <string name="location_description_label">Your current location will be used for the new scooter.</string>
    <string name="location_notification_title">Location Service</string>
    <string name="location_notification_text">Scooter Sharing is currently using your location.</string>
    <string name="last_photo_title_label">Last photo taken by users</string>
    <string name="last_photo_missing_label">No photo has been uploaded yet.</string>
</resources>
