<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MainFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <Button
        android:id="@+id/add_ride"
        android:layout_width="180dp"
        android:layout_height="24pt"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_ride_button" />

    <Button
        android:id="@+id/list_rides"
        android:layout_width="180dp"
        android:layout_height="24pt"
        android:layout_gravity="center_horizontal"
        android:text="@string/list_rides_button" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="180dp"
        android:layout_height="24pt"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_out_button" />

</LinearLayout>
