<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:parentActivityName=".MainActivity"
    tools:context=".StartRideActivity">

    <!-- Scooter Name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/name_label" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_name" />
    </LinearLayout>

    <!-- Scooter Location -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/location_label" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_location" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- Button to start a ride -->
    <Button
        android:layout_width="140dp"
        android:layout_height="20pt"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_ride_button"
        android:id="@+id/start_ride_button" />

</LinearLayout>
